--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- Icon -->
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="logo2.png">
     <!-- Website Title -->
     <title>Portfolio</title>
     <meta name="description" content="Portfolio"/>
