--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <!-- Icon -->
     <link rel="icon" href="logo2.png">
     <!-- Website Title -->
-    <title>Portfolio</title>
-    <meta name="description" content="Portfolio"/>
+    <title>Ashish Kumar Mishra | Portfolio</title>
+    <meta name="description" content="Visit my Portfolio to explore more about me."/>
     <!-- fonts and other links -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
